# ML-Model-Drift-Monitoring-Automated-Retraining-Platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: alerting_config.yaml  base_config.yaml  drift_thresholds.yaml
docs/: architecture.md  interview_project_guide.md  manual_validation.md  operational_guide.md  project_specification.md
planning/: implementation_plan_Ml drifter.md  task.md
scripts/: inject_drift.py  run_demo.py  setup_data.py  simulate_production.py  train_baseline.py
src/alerting/: __init__.py  alert_manager.py  email_notifier.py  slack_notifier.py
src/api/: __init__.py  app.py  middleware.py  schemas.py
src/api/routes/: __init__.py  health.py  models.py  monitoring.py  predictions.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  app.py
src/dashboard/callbacks/: __init__.py  drift_callbacks.py  overview_callbacks.py  performance_callbacks.py
src/dashboard/components/: alert_badge.py  metric_card.py  navbar.py  trend_chart.py
src/dashboard/layouts/: alerts.py  data_drift.py  model_registry.py  overview.py  performance.py  prediction_drift.py
src/data/: __init__.py  database.py  drift_injector.py  loader.py  logger.py
src/decision/: __init__.py  retraining_engine.py
src/monitoring/: __init__.py  concept_drift.py  data_drift.py  drift_manager.py  prediction_drift.py
src/pipeline/: __init__.py  deployer.py  retrain_pipeline.py
tests/: test_data_logger.py  test_decision_engine.py  test_drift_detection.py  test_prediction_api.py  test_retraining_pipeline.py
